# ethan-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  README_CN.md  THIRD_PARTY_NOTICES.md  dev-ethan.sh  dev.sh  docker-compose.dev.yml  docker-compose.pip.yml  docker-compose.yml  local-docker.sh  manager.sh  mkdocs.yml  package.json  patch_agent.py  patch_api.py  patch_web_api.py  patch_web_ui.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test_repl_e2e.py
.github/workflows/: auto-bump-version.yml  deploy-docs.yml  publish-desktop.yml  publish-docker.yml  publish-pypi.yml  test.yml
app/android/: PRD.md  README.md  settings.gradle.kts
browser-extension/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
browser-extension/src/: manifest.json
deploy/: .env.example  .env.nas-newapi.example  .env.nas.example  .env.new-api.example  Dockerfile  Dockerfile.calvin  Dockerfile.dev  Dockerfile.nas-multiarch  com.ethan.agent.plist  docker-compose.nas-newapi.yml  docker-compose.nas.yml  docker-compose.new-api.yml  docker-compose.pip.yml  docker-compose.searxng.yml  docker-compose.yml  install.sh  to-nas.sh
deploy/searxng/: entrypoint-wrapper.sh  settings.yml
desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  acp.md  agent-loop.md  architecture.md  background-tasks.md  browser-control-plan.md  caching.md  heartbeat.md  index.md  installation.md  interface.md  knowledge.md  legal-mode.md  memory.md  modes.md  new-api.md  palantir-inspired-improvements.md  privacy-policy.md  providers.md  quickstart.md  routing.md  scheduler.md  secrets.md  semantic-router.md  skills.md  tools.md  web-search.md
docs/browser/: extension-internals.md  overview.md  session-security.md  transport-protocol.md
docs/memory/: extraction-tuning.md  unification.md
ethan/: __init__.py  watchdog.py
ethan/acp/: __init__.py  agent_claude.py  agent_codex.py  agent_opencode.py  classify.py  mirror.py  models.py  session.py  utils.py
ethan/browser/: __init__.py  auth.py  http_route.py  hub.py  protocol.py  screenshot.py  session_map.py  ws_route.py
ethan/core/: agent.py  agent_factory.py  assets.py  background_polling.py  config.py  config_schema.py  consent.py  context.py  context_budget.py  custom_commands.py  file_jail.py  heartbeat.py  loop_control.py  modes.py  onboarding.py  paths.py  profile.py  provider_presets.py  routing.py  run_manager.py  secrets_store.py  session_ops.py  signed_url.py  stream_collector.py  timezone.py  tool_format.py  users.py
ethan/interface/: __main__.py  a2ui_text.py  api.py  channel_commands.py  cli.py  config_editor.py  lark.py  lark_agent.py  lark_auth.py  lark_client.py  lark_cmd_context.py  lark_deps.py  lark_event_handlers.py  lark_events.py  lark_fetch.py  lark_render.py  lark_send.py  lark_state.py  lark_stream.py  lark_tool_trace.py  lark_typing.py  repl.py  repl_commands.py  repl_stream.py  repl_ui.py  tui.py  wechat_cmd_context.py  wechat_events.py  wechat_ilink.py
ethan/knowledge/: __init__.py  base.py  registry.py
ethan/memory/: admission.py  api_keys.py  consolidator.py  daily_consolidation.py  daily_signals.py  dimensions.py  embeddings.py  episodic.py  extractors.py  facts.py  legacy_migration.py  memory_vectors.py  nightly_consolidation.py  persistent.py  procedures.py  recall.py  records.py  session.py  session_backup.py  signals.py  store.py  structured_consolidation.py  vector_store.py  working.py
ethan/providers/: anthropic.py  base.py  circuit_breaker.py  fallback.py  manager.py  openai_compat.py
ethan/scheduler/: cron.py  heartbeat.py  timeline.py
ethan/skills/: generator.py  loader.py  registry.py  router.py  stats.py  updater.py
ethan/tools/: base.py  mcp_client.py  registry.py  result_compressor.py  ui_resources.py
paper_work/router_dataset/: .gitignore  README.md  eval_external.py  eval_subcat.py  gen_browser.py  gen_channels.py  gen_code_review.py  gen_companion_listen.py  gen_deepwiki.py  gen_desktop.py  gen_finance_query.py  gen_getnote.py  gen_lark_doc.py  gen_lark_im.py  gen_lark_shared.py  gen_legal_assistant.py  gen_others.py  gen_paper_analysis.py  gen_ppt_generate.py  gen_skills_manager.py  gen_travel_query.py  gen_ui_card.py  gen_upload_cdn.py  train_lr_router.py
plan/: 01-skill-evolution-stats.md  02-skill-evolution-layer2.md  03-memory-context-fencing.md  04-memory-async-consolidation.md  05-skill-channel-routing.md  06-tool-call-interactive-ui.md  07-proactive-memory-writing.md  08-user-profile-memory.md
scripts/: compare_embeddings.py  gen_router_data.py  migrate_facts_to_memories.py  migrate_images_to_disk.py  migrate_memory_embeddings.py  prepare-docs-static.sh  stat_l2_distribution.py  test_embedding_scenarios.py
tests/: test_agent_routing.py  test_cross_session_memory.py  test_deliver_file.py  test_dream_e2e.py  test_extraction_wiring.py  test_instant_route.py  test_is_local.py  test_mcp_apps.py  test_memory_enhancements.py  test_named_profile_repro.py  test_plugin_embedding_router.py  test_provider_fallback.py  test_registry_router_logging.py  test_render_pptx_omml.py  test_routing_real_queries.py  test_structured_memory.py
tests/memory_eval/: README.md  eval_runner_dry.py  eval_runner_live.py  eval_runner_recall.py  generate.py
web/: .gitignore  CLAUDE.md  Dockerfile  fix_type.ts  next.config.js  next.config.ts  package.json  patch_api.py  patch_api_session.py  patch_chat_view.ts  patch_chat_view_2.ts  patch_chat_view_3.ts  patch_chat_view_4.ts  patch_chat_view_import.ts  patch_lib_api.ts  patch_session.py  patch_web_api.py  patch_web_ui.py  pnpm-lock.yaml  test_pexpect.py  tsconfig.json  update_agent.py
web/app/: globals.css  layout-shell.tsx  layout.tsx  page.tsx
web/components/: chat-view.tsx  (+21 more)
(+492 files in other folders)
