[project]
name = "ethan-agent"
version = "0.3.0"
description = "Ethan — Lightweight personal AI agent with memory, skills, and multi-model support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ai", "agent", "llm", "claude", "gemini", "assistant", "memory", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.109.1",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "lark-oapi>=1.6.8",
    "mcp>=1.27.2",
    "openai>=2.41.1",
    "pexpect>=4.9.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
    "sqlite-vec>=0.1.9",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
# embedding 路由器（可选）：BGE-small-zh INT8 ONNX + LR 头语义分类，补关键词漏掉的 tail 召回。
# 不装也能跑——router 不可用时 registry.match() 自动退回纯关键词匹配。
# INT8 模型 + tokenizer 首次使用时从 GitHub（llm011/router-models）按 raw URL 自动下载；
# LR 头随包分发。无需手动准备文件，也无需 huggingface_hub。
router = [
    "onnxruntime>=1.18.0",
    "transformers>=4.40.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/llm011/ethan-agent"
Repository = "https://github.com/llm011/ethan-agent"
Issues = "https://github.com/llm011/ethan-agent/issues"

[project.scripts]
ethan = "ethan.interface.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "ethan/**/*.py",
    "ethan/defaults/**",
    "ethan/web_dist/**",
    "ethan/docs/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "ethan/**/*.py",
    "ethan/defaults/**",
    "/README.md",
    "/README_CN.md",
    "/LICENSE",
    "/pyproject.toml",
]
