[project]
name = "ethan-agent"
version = "0.4.59"
description = "Ethan — Lightweight personal AI agent with memory, skills, and multi-model support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ai", "agent", "llm", "claude", "gemini", "assistant", "memory", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.109.1",
    "apscheduler>=3.11.2",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.3",
    "mcp>=1.27.2",
    "openai>=2.41.1",
    "pexpect>=4.9.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
    "sqlite-vec>=0.1.9",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
# 语义 embedding（可选）：BGE-small-zh INT8 ONNX（24MB，512 维，中文优化）。
# 同时服务于 memory.db 的 embedding 生成和 skill 路由器的语义匹配。
# 不装也能跑——memory 回退 char n-gram hash，router 回退纯关键词匹配。
# INT8 模型 + tokenizer 首次使用时从 GitHub（llm011/router-models）按 raw URL 自动下载；
# LR 头随包分发。无需手动准备文件，也无需 huggingface_hub/transformers。
embedding = [
    "onnxruntime>=1.18.0",
    "tokenizers>=0.19.0",
    "numpy>=1.26.0",
]

# router 是 embedding 的别名（向后兼容），实际依赖相同。
# 沿用旧名让 `pip install 'ethan-agent[router]'` 仍能工作。
router = [
    "onnxruntime>=1.18.0",
    "tokenizers>=0.19.0",
    "numpy>=1.26.0",
]

# computer-use（可选）：通过 cua-computer SDK 控制本机桌面截图/鼠标/键盘。
# 还需安装 cua-driver 后台服务：
#   curl -fsSL https://raw.githubusercontent.com/trycua/cua/main/libs/cua-driver/scripts/install.sh | bash
#   cua-driver install   # 注册为 macOS launchd 服务（开机自启）
computer = [
    "cua-computer>=0.3.0",
]

# 飞书渠道（可选）：配置飞书渠道时自动安装。
lark = [
    "lark-oapi>=1.6.8",
]

[project.urls]
Homepage = "https://github.com/llm011/ethan-agent"
Repository = "https://github.com/llm011/ethan-agent"
Issues = "https://github.com/llm011/ethan-agent/issues"

[project.scripts]
ethan = "ethan.interface.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# E: pycodestyle errors, F: pyflakes (F401=unused imports), I: isort
select = ["E", "F", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (re-exports)
"__init__.py" = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "ethan/**/*.py",
    "ethan/defaults/**",
    "ethan/web_dist/**",
    "ethan/docs/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "ethan/**/*.py",
    "ethan/defaults/**",
    "/README.md",
    "/README_CN.md",
    "/LICENSE",
    "/THIRD_PARTY_NOTICES.md",
    "/pyproject.toml",
]
