[package]
name = "ethan-desktop"
version = "0.5.19"
edition = "2021"
description = "Ethan Agent Desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
